2011-01-03  Dan Bernstein  <mitz@apple.com>

        Reviewed by Simon Fraser.

        Remove the unused RenderTableCell::m_percentageHeight
        https://bugs.webkit.org/show_bug.cgi?id=51837

        * rendering/RenderTableCell.cpp:
        (WebCore::RenderTableCell::RenderTableCell): Removed initialization of m_percentageHeight.
        * rendering/RenderTableCell.h: Removed m_percentageHeight.

2011-01-03  Simon Fraser  <simon.fraser@apple.com>

        Reviewed by David Hyatt.

        Implement -webkit-linear-gradient and -webkit-radial-gradient
        https://bugs.webkit.org/show_bug.cgi?id=28152

        Add support for -webkit-radial-gradients.

        Tests: fast/gradients/css3-radial-gradients.html
               fast/gradients/css3-radial-gradients2.html

        * css/CSSGradientValue.cpp:
        (WebCore::blend): Used to blend colors, which is necessary when truncating
        the start of radial gradients.
        (WebCore::GradientStop): Small struct to aid gradient stop processing.
        (WebCore::CSSGradientValue::addStops): Rename 'positions' to 'stops', and store
        the color so that we can blend it when truncating radial gradients. Changed
        to handle both linear and radial gradients.
        (WebCore::CSSRadialGradientValue::cssText): Update to follow the spec.
        (WebCore::CSSRadialGradientValue::resolveRadius): Stylistic change.
        (WebCore::distanceToClosestCorner): New utility method.
        (WebCore::distanceToFarthestCorner): Ditto.
        (WebCore::CSSRadialGradientValue::createGradient): New logic to deal with shape and
        fill rules.

        * css/CSSGradientValue.h:
        (WebCore::CSSGradientValue::isLinearGradient): Color-stop processing needs to know what
        kind of gradient it's dealing with, so add new isFooGradient methods.
        (WebCore::CSSGradientValue::isRadialGradient): Ditto.
        (WebCore::CSSLinearGradientValue::isLinearGradient):